tests/machine/x/fs/two-sum.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/two-sum.fs(1,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Two-sum' based on the file name 'two-sum.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/machine/x/fs/two-sum.fs(8,17): error FS0001: This expression was expected to have type
    unit    
but here has type
    'a list    
