tests/machine/x/fs/two-sum.fs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T16:28:41Z
open System

let twoSum (nums) (target) =
    let n: obj = List.length nums
    for i in 0 .. (n - 1) do
        for j in i + 1 .. (n - 1) do
            if nums.[i] + nums.[j] = target then
                [i; j]
    [-1; -1]
let result: obj = twoSum [2; 7; 11; 15] 9
printfn "%A" (result.[0])
printfn "%A" (result.[1])
